# youtube_and_webpage_chat

./: .env.example  .gitignore  Readme.md  pyproject.toml
src/: main.py
src/app/: controller.py
src/renderers/: __init__.py  rich_renderer.py
src/services/: __init__.py  content_fetcher.py  llm_factory.py  ollama_client.py  openrouter_client.py
tests/: conftest.py  test_controller.py
